some changes in pricing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header__up">
 
             <div class="header__logo">
-                <img class="img__logo" src="img/logo-barista.svg" alt="logo-barista">
+                <a href="#header"><img class="img__logo" src="img/logo-barista.svg" alt="logo-barista"></a>
             </div>
             <div class="header__nav">
                 <nav class="nav__links">
@@ -385,15 +385,15 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> For all coffee fans;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Offline lessons only;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> All materials included;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> 8 hours of training;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Easy to repeat at home;</li>
                     </ul>
                     <button class="button__pricing">
@@ -408,15 +408,15 @@
                         $365 | 23 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> For beginners;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> 50+ hours of training;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Classic drinks;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Interships included;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> A certificate is issued;
                         </li>
                     </ul>
@@ -432,17 +432,17 @@
                         $350 | 14 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> For proffessionals;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Online and offline;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Proffessional equipment;
                         </li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Coffee roasting details;
                         </li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Alternative brewing;</li>
                     </ul>
                     <button class="button__pricing">
@@ -457,15 +457,15 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> For beginners;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Classic recipes;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Secret tips;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> Making lush milk foam;</li>
-                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
                                 class="img__checked__menu"> 10 hours of training;</li>
                     </ul>
                     <button class="button__pricing">
