some changes in header

--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
             <div class="header__nav">
                 <nav class="nav__links">
                     <ul class="header__list">
-                        <li>
+                        <li class="header__list__li">
                             <span>
                                 <a class="nav__link" href="#about__us">About us</a>
                             </span>
                         </li>
-                        <li>
+                        <li class="header__list__li">
                             <span>
                                 <a class="nav__link" href="#courses">Courses</a>
                             </span>
                         </li>
-                        <li>
+                        <li class="header__list__li">
                             <a class="nav__link" href="#pricing">Pricing</a>
                         </li>
-                        <li>
+                        <li class="header__list__li">
                             <span>
                                 <a class="nav__link" href="#testmonials">Testmonials</a>
                             </span>
                         </li>
-                        <li>
+                        <li class="header__list__li">
                             <span>
                                 <a class="nav__link" href="#contacts">Contacts</a>
                             </span>
