css our fav cofee background img text in front of img

--- a/index.html
+++ b/index.html
@@ -326,24 +326,32 @@
             </div>
 
             <div class="photo_coffee">
-                <div class="Cold_Latte">
+                <div class="cold_latte">
 
-                    <img id="coffee_background" src="img/photo_coffe_background.png" alt="photo_coffe_background">
+                    <!-- <img id="coffee_background" src="img/photo_coffe_background.png" alt="photo_coffe_background"> -->
+                    <div class="content_cl">
 
-                    <h4>COLD LATTE</h4>
-                    <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk, syrup,
-                        and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix into
-                        glasses and decorate the glass with whipped cream.</p>
-                    <a href="#" class="button_cold_latte_open">Open</a>
+                        <h4 class="title">COLD LATTE</h4>
+                        <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk,
+                            syrup,
+                            and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix into
+                            glasses and decorate the glass with whipped cream.</p>
+                        <a href="#" class="button_cold_latte_open">Open</a>
+                    </div>
                 </div>
-                <div class="Cheese_Dessert">
-                    <img id="cheese_dessert" src="img/photo_cheese_desert.jpg" alt="photo_cheese_desert">
-                    <h4>CHESSE DESSERT</h4>
-                    <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it down. Put
-                        cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them to the
-                        cheese-coffee bowl. Then, mix it and serve on small plates.</p>
-                    <a href="#" class="button_cheese_dessert_open">Open</a>
+                <div class="cheese_dessert">
+                    <!-- <img id="cheese_dessert" src="img/photo_cheese_desert.jpg" alt="photo_cheese_desert"> -->
+                    <div class="content_cl">
+                        <h4>CHESSE DESSERT</h4>
+                        <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it down.
+                            Put
+                            cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them to
+                            the
+                            cheese-coffee bowl. Then, mix it and serve on small plates.</p>
+                        <a href="#" class="button_cheese_dessert_open">Open</a>
+                    </div>
                 </div>
+            </div>
             </div>
             <img src="img/top-white-cloud-rt.svg" alt="top-white-cloud-rt">
         </section>
@@ -385,16 +393,16 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> For all coffee fans;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Offline lessons only;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> All materials included;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> 8 hours of training;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Easy to repeat at home;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> For all coffee fans;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Offline lessons only;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> All materials included;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> 8 hours of training;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Easy to repeat at home;</li>
                     </ul>
                     <button class="button__pricing">
                         Select Course
@@ -408,16 +416,16 @@
                         $365 | 23 days
                     </span>
                     <ul class="list__about__course">
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> For beginners;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> 50+ hours of training;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Classic drinks;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Interships included;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> A certificate is issued;
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> For beginners;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> 50+ hours of training;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Classic drinks;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Interships included;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> A certificate is issued;
                         </li>
                     </ul>
                     <button class="button__pricing">
@@ -432,18 +440,18 @@
                         $350 | 14 days
                     </span>
                     <ul class="list__about__course">
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> For proffessionals;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Online and offline;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Proffessional equipment;
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> For proffessionals;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Online and offline;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Proffessional equipment;
                         </li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Coffee roasting details;
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Coffee roasting details;
                         </li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Alternative brewing;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Alternative brewing;</li>
                     </ul>
                     <button class="button__pricing">
                         Select Course
@@ -457,16 +465,16 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> For beginners;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Classic recipes;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Secret tips;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> Making lush milk foam;</li>
-                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu"
-                                class="img__checked__menu"> 10 hours of training;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> For beginners;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Classic recipes;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Secret tips;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> Making lush milk foam;</li>
+                        <li class="cards__list"><img class="img__checked__menu" src="img/checked__menu.svg"
+                                alt="checked menu" class="img__checked__menu"> 10 hours of training;</li>
                     </ul>
                     <button class="button__pricing">
                         Select Course
