--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                 <div class="coffee-like-a-pro-at-home">
                     <img width="260" src="img/coffee_like_a_pro/pro_at_home.png" alt="coffee-like-a-pro-at-home">
                     <h3 class="coffee-like-a-pro-at-home">COFFEE LIKE A PRO AT HOME</h3>
-                    <img width="10px" src="img/coffee_like_a_pro/calendar.svg" alt="calendar">
+                    <img width="10p" src="img/coffee_like_a_pro/calendar.svg" alt="calendar">
                     <span class="coffee-like-a-pro-at-home">5 days</span>
-                    <img width="10px" src="img/coffee_like_a_pro/price.svg" alt="price">
+                    <img width="10p" src="img/coffee_like_a_pro/price.svg" alt="price">
                     <span class="coffee-like-a-pro-at-home">$150</span>
-                    <img width="10px" src="img/coffee_like_a_pro/team.svg" alt="team">
+                    <img width="10p" src="img/coffee_like_a_pro/team.svg" alt="team">
                     <span class="coffee-like-a-pro-at-home">5-10</span>
                     <p class="make-coffe-like-a-pro">If find yourself asking too much at coffee shops, try making coffee
                         professionally yourself. Become a pro coffee maker at home and then invite your friends for a
@@ -181,7 +181,7 @@
                 <div class="columns_making__coffee">
                     <div class="column__making-coffee">
                         <p class="fonts_logo_making">About</p>
-                        <h2 class="h2_master_coffee_making">MASTER COFFEE MAKING!</h2>
+                        <h2 class="h2_master_coffee_making">MASTER COFFEE MAKING</h2>
                         <p class="p_making__font">At our school, you'll learn all coffee secrets.</p>
                         <p class="p_making_coffee_fonts">Coffee Lab School gives a real-life experience of a coffee shop
                             with an
