display in products.css

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
         <!-- Olena Kalamuniak-->
         <section class="our_fav_coffee_recipes">
-            <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this">
+            <!-- <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this"> -->
             <div class="recipes">
                 <p id="first_p_with_int-print">Recipes</p>
                 <h2 class="recipes_our_fav">OUR FAVORITE COFFEE RECIPES</h2>
@@ -324,36 +324,41 @@
                     <p>If you are bored with classic lattes and cappuccinos, browse this section.</p>
                 </div>
             </div>
+           
 
-            <div class="photo_coffee">
-                <div class="cold_latte">
+                <div class="photo_coffee">
+                    <div class="cold_latte">
 
-                    <!-- <img id="coffee_background" src="img/photo_coffe_background.png" alt="photo_coffe_background"> -->
-                    <div class="content_cl">
+                        <!-- <img id="coffee_background" src="img/photo_coffe_background.png" alt="photo_coffe_background"> -->
+                        <div class="content_cl">
 
-                        <h4 class="title">COLD LATTE</h4>
-                        <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk,
-                            syrup,
-                            and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix into
-                            glasses and decorate the glass with whipped cream.</p>
-                        <a href="#" class="button_cold_latte_open">Open</a>
+                            <h4 class="title">COLD LATTE</h4>
+                            <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk,
+                                syrup,
+                                and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix
+                                into
+                                glasses and decorate the glass with whipped cream.</p>
+                            <a href="#" class="button_cold_latte_open">Open</a>
+                        </div>
+                    </div>
+                    <div class="cheese_dessert">
+                        <!-- <img id="cheese_dessert" src="img/photo_cheese_desert.jpg" alt="photo_cheese_desert"> -->
+                        <div class="content_cl">
+                            <h4>CHESSE DESSERT</h4>
+                            <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it
+                                down.
+                                Put
+                                cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them
+                                to
+                                the
+                                cheese-coffee bowl. Then, mix it and serve on small plates.</p>
+                            <a href="#" class="button_cheese_dessert_open">Open</a>
+                        </div>
                     </div>
                 </div>
-                <div class="cheese_dessert">
-                    <!-- <img id="cheese_dessert" src="img/photo_cheese_desert.jpg" alt="photo_cheese_desert"> -->
-                    <div class="content_cl">
-                        <h4>CHESSE DESSERT</h4>
-                        <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it down.
-                            Put
-                            cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them to
-                            the
-                            cheese-coffee bowl. Then, mix it and serve on small plates.</p>
-                        <a href="#" class="button_cheese_dessert_open">Open</a>
-                    </div>
-                </div>
+
             </div>
-            </div>
-            <img src="img/top-white-cloud-rt.svg" alt="top-white-cloud-rt">
+            <!-- <img src="img/top-white-cloud-rt.svg" alt="top-white-cloud-rt"> -->
         </section>
 
 
