css media max-width 990 media ax-width 1200

--- a/index.html
+++ b/index.html
@@ -293,8 +293,10 @@
         </section>
 
         <!-- Olena Kalamuniak-->
-        <section class="our_fav_coffee_recipes">
+        <section id="our_fav_coffee_recipes">
+
             <!-- <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this"> -->
+         <div class="container_our_f">
             <div class="recipes">
                 <p id="first_p_with_int-print">Recipes</p>
                 <h2 class="recipes_our_fav">OUR FAVORITE COFFEE RECIPES</h2>
@@ -341,6 +343,7 @@
                 </div>
 
             </div>
+        </div>
             <!-- <img src="img/top-white-cloud-rt.svg" alt="top-white-cloud-rt"> -->
         </section>
 
