change index team

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     </div>
                 </article>
                 <article class="card_team" id="card_team_anna">
-                    <img class="img_team" src="img/photo_team_img.png" alt="team">
+                    <img class="img_team" id="img_team_anna" src="img/photo_team_img.png" alt="team">
                     <div class="team__info">
                         <em class="font__info_team">Latte master</em>
                         <h2 class="h2_team_name">ANNA LENO</h2>
