some changes in header

--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app/app-header.app"></script>
 </body>
 
 </html>
