--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                         d="M48 4c24.256 0 44 19.744 44 44s-19.744 44-44 44c-24.26 0-44-19.744-44-44s19.74-44 44-44zM48 0c-26.508 0-48 21.492-48 48s21.492 48 48 48 48-21.492 48-48-21.492-48-48-48v0z"
                         fill="currentColor" style=""></path>
                 </svg>
+                <div class="header-nav__menu-item clock-container"></div>
             </div>
         </section>
         <section class="team">
@@ -745,6 +746,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app/app-header.app"></script>
+    <script src="js/clock.js"></script>
 </body>
 
 </html>
