--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         d="M48 4c24.256 0 44 19.744 44 44s-19.744 44-44 44c-24.26 0-44-19.744-44-44s19.74-44 44-44zM48 0c-26.508 0-48 21.492-48 48s21.492 48 48 48 48-21.492 48-48-21.492-48-48-48v0z"
                         fill="currentColor" style=""></path>
                 </svg>
-                <div class="header-nav__menu-item clock-container"></div>
+                <div class="clock-video clock-container"></div>
             </div>
         </section>
         <section class="team">
