--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app/app-header.app"></script>
-    <script src="js/clock.js"></script>
+    <script src="js/clock-class-video.js"></script>
 </body>
 
 </html>
