changes in pricing

--- a/index.html
+++ b/index.html
@@ -380,7 +380,11 @@
                 </p>
             </div>
             <div class="about__course__container">
-                <article class="about__course">
+                <div class="slider-track__pricing">
+                    <div class="main-products__carousel">
+                        <div class="slide-container"></div>
+                    </div>
+               <!-- <article class="about__course">
                     <h4 class="about__course__header">
                         LATTE ART COURSE
                     </h4>
@@ -474,8 +478,9 @@
                     <button class="button__pricing">
                         Select Course
                     </button>
-                </article>
+                </article>-->
             </div>
+        </div>
             <div class="img-under-pricing">
                 <svg width="100%" height="100%" viewBox="0 0 2100 183" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="2100" height="80" fill="#27292B" />
@@ -745,8 +750,9 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app/app-header.app"></script>
+    <script src="js/app-header.js"></script>
     <script src="js/clock-class-video.js"></script>
+    <script src="js/app-pricing-carousel.js"></script>
 </body>
 
 </html>
