added script in index.html

--- a/index.html
+++ b/index.html
@@ -753,6 +753,8 @@
     <script src="js/app-header.js"></script>
     <script src="js/clock-class-video.js"></script>
     <script src="js/app-pricing-carousel.js"></script>
+    <script src="js/app-pricing-cards.js"></script>
+
 </body>
 
 </html>
