remember this srction

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 
         <!-- Olena Kalamuniak-->
         <section class="remember_this">
-            <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this">
+            <!-- <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this"> -->
             <div class="remember_this__features">
                 <p id="first_p_with_int-print">Features</p>
                 <h2>REMEMBER THIS</h2>
